--- a/applications/luci-app-advanced-reboot/po/ru/advanced-reboot.po
+++ b/applications/luci-app-advanced-reboot/po/ru/advanced-reboot.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: LuCI: advanced-reboot\n"
 "POT-Creation-Date: 2017-11-30 15:20+0300\n"
-"PO-Revision-Date: 2020-11-22 15:35+0000\n"
-"Last-Translator: Max Smolik <makcum15@gmail.com>\n"
+"PO-Revision-Date: 2021-01-09 15:32+0000\n"
+"Last-Translator: Nt0G <nt0gggg@gmail.com>\n"
 "Language-Team: Russian <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationsadvanced-reboot/ru/>\n"
 "Language: ru\n"
@@ -12,16 +12,13 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 4.4-dev\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 
-#: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/advanced_reboot.htm:29
-msgid "Action"
-msgstr "Действие"
-
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:82
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:171
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/advanced_reboot.htm:10
+#, fuzzy
 msgid "Advanced Reboot"
-msgstr "Дополнительная перезагрузка"
+msgstr "Продвинутая перезагрузка"
 
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/advanced_reboot.htm:36
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/advanced_reboot.htm:60
@@ -32,6 +29,15 @@ msgstr "Альтернатива"
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/power_off.htm:20
 msgid "Cancel"
 msgstr "Отмена"
+
+#: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/applyreboot.htm:42
+msgid "Changes applied."
+msgstr "Изменения установлены."
+
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:131
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:132
+msgid "Compressed"
+msgstr "Сжатый"
 
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/alternative_reboot.htm:10
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/power_off.htm:10
@@ -48,10 +54,14 @@ msgid "ERROR:"
 msgstr "ОШИБКА:"
 
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/advanced_reboot.htm:28
-msgid "Firmware/OS (Kernel)"
-msgstr "Прошивка/ОС (Ядро)"
+msgid "Firmware"
+msgstr "Прошивка"
 
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:112
+#: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/applyreboot.htm:45
+msgid "Loading"
+msgstr "Загрузка"
+
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:213
 msgid "No access to fw_printenv or fw_printenv!"
 msgstr "Нет доступа к fw_printenv или fw_printenv!"
 
@@ -65,7 +75,7 @@ msgstr "Разделы"
 
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/advanced_reboot.htm:94
 msgid "Perform power off..."
-msgstr "Выполнить отключение..."
+msgstr "Выключить..."
 
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/power_off.htm:10
 msgid "Power Off Device"
@@ -76,26 +86,33 @@ msgstr "Отключить питание устройства"
 msgid "Proceed"
 msgstr "Продолжить"
 
+#: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/advanced_reboot.htm:29
+msgid "Reboot"
+msgstr "Перезагрузка"
+
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/alternative_reboot.htm:10
+#, fuzzy
 msgid "Reboot Device to an Alternative Partition"
-msgstr "Перезагрузить устройство в альтернативный раздел"
+msgstr "Перезагрузить устройство в другой раздел"
 
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/advanced_reboot.htm:50
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/advanced_reboot.htm:74
 msgid "Reboot to alternative partition..."
-msgstr "Перезагрузить до альтернативного раздела..."
+msgstr "Перезагрузить в другой раздел..."
 
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/advanced_reboot.htm:45
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/advanced_reboot.htm:69
 msgid "Reboot to current partition"
-msgstr "Перезагрузка к текущему разделу"
+msgstr "Перезагрузка в текущий раздел"
 
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:91
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:163
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:192
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:264
+#: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/applyreboot.htm:9
+#: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/applyreboot.htm:39
 msgid "Rebooting..."
 msgstr "Перезагрузка..."
 
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:197
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:297
 msgid "Shutting down..."
 msgstr "Выключение..."
 
@@ -103,7 +120,11 @@ msgstr "Выключение..."
 msgid "Status"
 msgstr "Состояние"
 
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:92
+#: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/applyreboot.htm:39
+msgid "System"
+msgstr "Система"
+
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:193
 msgid ""
 "The system is rebooting now.<br /> DO NOT POWER OFF THE DEVICE!<br /> Wait a "
 "few minutes before you try to reconnect. It might be necessary to renew the "
@@ -115,53 +136,60 @@ msgstr ""
 "Возможно, потребуется обновить адрес компьютера для повторного доступа к "
 "устройству в зависимости от настроек."
 
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:164
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:265
 msgid ""
 "The system is rebooting to an alternative partition now.<br /> DO NOT POWER "
 "OFF THE DEVICE!<br /> Wait a few minutes before you try to reconnect. It "
 "might be necessary to renew the address of your computer to reach the device "
 "again, depending on your settings."
 msgstr ""
-"Система перезагружается на альтернативный раздел.<br /> НЕ ВЫКЛЮЧАЙТЕ "
+"Система перезагружается в альтернативный раздел.<br />НЕ ВЫКЛЮЧАЙТЕ "
 "УСТРОЙСТВО!<br /> Подождите несколько минут и попробуйте переустановить "
 "соединение. В зависимости от настроек может потребоваться обновить адрес "
 "компьютера для доступа к устройству."
 
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:198
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:298
 msgid ""
 "The system is shutting down now.<br /> DO NOT POWER OFF THE DEVICE!<br /> It "
 "might be necessary to renew the address of your computer to reach the device "
 "again, depending on your settings."
 msgstr ""
-"Система завершает работу.<br /> НЕ ВЫКЛЮЧАЙТЕ УСТРОЙСТВО!<br /> Возможно, "
+"Система завершает работу.<br />НЕ ВЫКЛЮЧАЙТЕ УСТРОЙСТВО!<br /> Возможно, "
 "потребуется обновить адрес компьютера для повторного доступа к устройству в "
 "зависимости от настроек."
 
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:67
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:68
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:147
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:148
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:144
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:145
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:248
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:249
 msgid "Unable to find Dual Boot Flag Partition."
-msgstr "Невозможно найти Dual Boot раздел."
+msgstr "Не удалось найти раздел, отмеченный как Dual Boot."
 
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:119
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:120
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:133
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:134
-msgid "Unable to obtain firmware environment variable"
-msgstr "Невозможно получить переменную среды прошивки"
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:220
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:221
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:234
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:235
+msgid "Unable to obtain firmware environment variable: %s."
+msgstr "Не удалось получить переменную окружения прошивки: %s."
 
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:155
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:156
-msgid "Unable to set Dual Boot Flag Partition entry for partition"
-msgstr "Невозможно использовать Dual Boot раздел."
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:256
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:257
+msgid "Unable to set Dual Boot Flag Partition entry for partition: %s."
+msgstr "Не удалось установить точку входа Dual Boot для раздела: %s."
 
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:125
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:226
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:227
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:240
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:241
+msgid "Unable to set firmware environment variable: %s to %s."
+msgstr "Не удалось установить переменную окружения прошивки: %s в %s."
+
 #: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:126
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:139
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:140
-msgid "Unable to set firmware environment variable"
-msgstr "Невозможно установить переменную среды прошивки"
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:127
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:131
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:132
+msgid "Unknown"
+msgstr "Неизвестно"
 
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/alternative_reboot.htm:12
 msgid ""
@@ -175,14 +203,13 @@ msgid ""
 "to reboot device to an alternative partition."
 msgstr ""
 "ВНИМАНИЕ: альтернативный раздел может иметь собственные настройки и "
-"совершенно другую прошивку.<br /><br /> Поскольку ваши настройки сети и WiFi "
-"SSID/пароли на альтернативных разделах могут отличаться, может потребоваться "
+"совершенно иное ПО.<br /><br /> Поскольку ваши настройки сети и SSID/пароль "
+"WiFi на альтернативном разделе могут отличаться, может потребоваться "
 "изменить настройки компьютера, чтобы иметь возможность получить доступ к "
-"устройству после перезагрузки .<br /><br /> Помните также, что "
-"альтернативный раздел с прошивкой может не обеспечить простой способ "
-"переключения активного раздела и загрузки обратно в текущий активный раздел."
-"<br /><br /> Нажмите \"Продолжить\" ниже, чтобы перезагрузить устройство в "
-"альтернативный раздел."
+"устройству после перезагрузки .<br /><br /> Помните также, что ПО, "
+"установленное на альтернативный раздел, может не обеспечить простой способ "
+"переключения обратно в текущий активный раздел.<br /><br /> Нажмите "
+"«Продолжить», чтобы перезагрузить устройство в альтернативный раздел."
 
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/power_off.htm:12
 msgid ""
@@ -190,9 +217,13 @@ msgid ""
 "support power off.<br /><br /> Click \"Proceed\" below to power off your "
 "device."
 msgstr ""
-"ВНИМАНИЕ: Отключение питания может привести к перезагрузке устройства, "
-"которое не поддерживает выключение питания.<br /><br /> Нажмите \"Продолжить"
-"\" ниже, чтобы выключить устройство."
+"ВНИМАНИЕ: Отключение питания может привести к перезагрузке устройства, если "
+"оно не поддерживает отключение питания.<br /><br /> Нажмите «Продолжить», "
+"чтобы выключить устройство."
+
+#: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/applyreboot.htm:46
+msgid "Waiting for changes to be applied..."
+msgstr "Ждём установления изменений..."
 
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/advanced_reboot.htm:83
 msgid "Warning: Device (%s) is unknown or isn't a dual-partition device!"
@@ -202,7 +233,7 @@ msgstr ""
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/advanced_reboot.htm:14
 msgid "Warning: There are unsaved changes that will get lost on reboot!"
 msgstr ""
-"Внимание: Есть не сохраненные изменения, которые будут потеряны при "
+"Внимание: Есть несохранённые изменения, которые будут потеряны при "
 "перезагрузке!"
 
 #: applications/luci-app-advanced-reboot/luasrc/view/advanced_reboot/advanced_reboot.htm:97
@@ -213,15 +244,10 @@ msgstr "Внимание: Эта система не поддерживает о
 msgid "Warning: Unable to obtain device information!"
 msgstr "Внимание: Невозможно получить информацию об устройстве!"
 
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:125
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:126
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:139
-#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:140
-msgid "to"
-msgstr ""
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:45
+msgid "attempting to mount alternative partition (mtd%s)"
+msgstr "попытка монтирования альтернативного раздела (mtd%s)"
 
-msgid "Alternative reboot cancelled."
-msgstr "Альтернативная перезагрузка отменена."
-
-msgid "Warning: This system does not have two partitions!"
-msgstr "Внимание: Эта система не имеет двух разделов!"
+#: applications/luci-app-advanced-reboot/luasrc/controller/advanced_reboot.lua:54
+msgid "attempting to unmount alternative partition (mtd%s)"
+msgstr "попытка размонтирования альтернативного раздела (mtd%s)"
