--- a/applications/luci-app-simple-adblock/po/ja/simple-adblock.po
+++ b/applications/luci-app-simple-adblock/po/ja/simple-adblock.po
@@ -1,28 +1,144 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Language-Team: \n"
-"MIME-Version: 1.0\n"
-"Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.12\n"
-"Last-Translator: INAGAKI Hiroshi <musashino.open@gmail.com>\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"PO-Revision-Date: 2020-07-22 08:29+0000\n"
+"Last-Translator: Satoru Yoshida <ramat@ram.ne.jp>\n"
+"Language-Team: Japanese <https://hosted.weblate.org/projects/openwrt/"
+"luciapplicationssimple-adblock/ja/>\n"
 "Language: ja\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Weblate 4.2-dev\n"
 
-msgid "Blacklisted Domain URLs"
-msgstr "ドメイン ブラックリストのURL"
+msgid "%s Error: %s"
+msgstr ""
 
-msgid "Blacklisted Domains"
-msgstr "ブラックリスト ドメイン"
+msgid "%s Error: %s %s"
+msgstr ""
 
-msgid "Blacklisted Hosts URLs"
-msgstr "hosts ブラックリストのURL"
+msgid "%s is blocking %s domains (with %s)."
+msgstr ""
 
-msgid "Controls system log and console output verbosity"
-msgstr "システム ログとコンソール出力の冗長性を設定します。"
+msgid "%s is not installed or not found"
+msgstr "%s は未インストールかまたは見つかりません"
+
+msgid "Add IPv6 entries"
+msgstr ""
+
+msgid "Add IPv6 entries to block-list."
+msgstr ""
+
+msgid "Advanced Configuration"
+msgstr "詳細設定"
+
+msgid "Allowed Domain URLs"
+msgstr ""
+
+msgid "Allowed Domains"
+msgstr ""
+
+msgid "Allowed and Blocked Lists Management"
+msgstr ""
+
+msgid ""
+"Attempt to create a compressed cache of block-list in the persistent memory."
+msgstr ""
+
+msgid "Automatic Config Update"
+msgstr ""
+
+msgid "Basic Configuration"
+msgstr "基本設定"
+
+msgid "Blocked Domain URLs"
+msgstr ""
+
+msgid "Blocked Domains"
+msgstr ""
+
+msgid "Blocked Hosts URLs"
+msgstr ""
+
+msgid "Cache file containing %s domains found."
+msgstr ""
+
+msgid "Collected Errors"
+msgstr ""
+
+msgid "Compressed cache file found."
+msgstr ""
+
+msgid "Configuration"
+msgstr "設定"
+
+msgid "Controls system log and console output verbosity."
+msgstr ""
+
+msgid "Curl download retry"
+msgstr ""
+
+msgid "DNS Service"
+msgstr ""
+
+msgid "DNSMASQ Additional Hosts"
+msgstr ""
+
+msgid "DNSMASQ Config"
+msgstr ""
+
+msgid "DNSMASQ IP Set"
+msgstr ""
+
+msgid "DNSMASQ Servers File"
+msgstr ""
+
+msgid "Delay (in seconds) for on-boot start"
+msgstr "ブート時遅延実行（秒）"
+
+msgid "Disable"
+msgstr "無効"
+
+msgid "Disable Debugging"
+msgstr "デバッグ無効"
+
+msgid "Do not add IPv6 entries"
+msgstr ""
+
+msgid "Do not store compressed cache"
+msgstr ""
+
+msgid "Do not use simultaneous processing"
+msgstr ""
+
+msgid "Download time-out (in seconds)"
+msgstr "ダウンロード タイムアウト（秒）"
+
+msgid "Downloading"
+msgstr ""
+
+msgid "Enable"
+msgstr "有効"
+
+msgid "Enable Debugging"
+msgstr "デバッグ有効"
+
+msgid "Enables debug output to /tmp/simple-adblock.log."
+msgstr ""
+
+msgid "Error"
+msgstr "エラー"
+
+msgid "Fail"
+msgstr ""
+
+msgid "Force Re-Download"
+msgstr ""
+
+msgid "Force Reloading"
+msgstr ""
 
 msgid "Force Router DNS"
 msgstr "ルーターDNSの強制"
@@ -30,28 +146,71 @@ msgstr "ルーターDNSの強制"
 msgid "Force Router DNS server to all local devices"
 msgstr "全ローカル デバイスにルーター DNSサーバーの使用を強制"
 
-msgid "Forces Router DNS use on local devices, also known as DNS Hijacking"
+msgid "Forces Router DNS use on local devices, also known as DNS Hijacking."
 msgstr ""
-"ローカル デバイスに対し、ルーター上のDNSサーバーの使用を強制します。これは、"
-"DNS ハイジャックとしても知られています。"
 
-msgid "Individual domains to be blacklisted"
-msgstr "ブラックリストに登録する、個々のドメインです。"
+msgid "IPv6 Support"
+msgstr ""
 
-msgid "Individual domains to be whitelisted"
-msgstr "ホワイトリストに登録する、個々のドメインです。"
+msgid ""
+"If curl is installed and detected, it would retry download this many times "
+"on timeout/fail."
+msgstr ""
+
+msgid "Individual domains to be allowed."
+msgstr ""
+
+msgid "Individual domains to be blocked."
+msgstr ""
+
+msgid "Info"
+msgstr "情報"
 
 msgid "LED to indicate status"
 msgstr "ステータスを表示するLED"
 
+msgid ""
+"Launch all lists downloads and processing simultaneously, reducing service "
+"start time."
+msgstr ""
+
 msgid "Let local devices use their own DNS servers if set"
 msgstr "DNSサーバーの使用を強制しない"
+
+msgid "Loading"
+msgstr "読み込み中"
+
+msgid "Message"
+msgstr ""
 
 msgid "Output Verbosity Setting"
 msgstr "出力詳細度の設定"
 
-msgid "Pick the LED not already used in"
-msgstr "右の設定で既に使用されていないLEDを選択します"
+msgid "Perform config update before downloading the block/allow-lists."
+msgstr ""
+
+msgid ""
+"Pick the DNS resolution option to create the adblock list for, see the <a "
+"href=\"%s#dns-resolution-option\" target=\"_blank\">README</a> for details."
+msgstr ""
+
+msgid "Pick the LED not already used in %sSystem LED Configuration%s."
+msgstr ""
+
+msgid "Please note that %s is not supported on this system."
+msgstr ""
+
+msgid "Restarting"
+msgstr ""
+
+msgid "Run service after set delay on boot."
+msgstr ""
+
+msgid "Service Status"
+msgstr "サービス ステータス"
+
+msgid "Service Status [%s %s]"
+msgstr "サービス・ステータス [%s %s]"
 
 msgid "Simple AdBlock"
 msgstr "Simple AdBlock"
@@ -59,35 +218,122 @@ msgstr "Simple AdBlock"
 msgid "Simple AdBlock Settings"
 msgstr "Simple AdBlock 設定"
 
+msgid "Simultaneous processing"
+msgstr ""
+
 msgid "Some output"
 msgstr "軽量出力"
 
-msgid "Start Simple Adblock service"
+msgid "Start"
+msgstr "開始"
+
+msgid "Starting"
+msgstr ""
+
+msgid "Stop"
+msgstr "停止"
+
+msgid "Stop the download if it is stalled for set number of seconds."
+msgstr ""
+
+msgid "Stopped"
+msgstr "停止済"
+
+msgid "Store compressed cache"
+msgstr ""
+
+msgid "Store compressed cache file on router"
+msgstr ""
+
+msgid "Success"
 msgstr ""
 
 msgid "Suppress output"
 msgstr "出力の抑制"
 
-msgid "System LED Configuration"
-msgstr "LED 設定"
+msgid "Task"
+msgstr "タスク"
 
-msgid "URLs to lists of domains to be blacklisted"
-msgstr "ブラックリストに登録するドメインのリストのURLです。"
+msgid "URLs to lists of domains to be allowed."
+msgstr ""
 
-msgid "URLs to lists of domains to be whitelisted"
-msgstr "ホワイトリストに登録するドメインのリストのURLです。"
+msgid "URLs to lists of domains to be blocked."
+msgstr ""
 
-msgid "URLs to lists of hosts to be blacklisted"
-msgstr "ブラックリストに登録するドメインが列挙された、hostsファイルのURLです。"
+msgid "URLs to lists of hosts to be blocked."
+msgstr ""
+
+msgid "Unbound AdBlock List"
+msgstr ""
+
+msgid "Use simultaneous processing"
+msgstr ""
 
 msgid "Verbose output"
 msgstr "詳細出力"
 
-msgid "Whitelisted Domain URLs"
-msgstr "ドメイン ホワイトリストのURL"
+msgid "Warning"
+msgstr "警告"
 
-msgid "Whitelisted Domains"
-msgstr "ホワイトリスト ドメイン"
+msgid "failed to access shared memory"
+msgstr ""
+
+msgid "failed to create '%s' file"
+msgstr ""
+
+msgid "failed to create block-list or restart DNS resolver"
+msgstr ""
+
+msgid "failed to create compressed cache"
+msgstr ""
+
+msgid "failed to download"
+msgstr ""
+
+msgid "failed to download Config Update file"
+msgstr ""
+
+msgid "failed to format data file"
+msgstr ""
+
+msgid "failed to move '%s' to '%s'"
+msgstr ""
+
+msgid "failed to move temporary data file to '%s'"
+msgstr ""
+
+msgid "failed to optimize data file"
+msgstr ""
+
+msgid "failed to parse"
+msgstr ""
+
+msgid "failed to parse Config Update file"
+msgstr ""
+
+msgid "failed to process allow-list"
+msgstr ""
+
+msgid "failed to reload/restart DNS resolver"
+msgstr ""
+
+msgid "failed to remove temporary files"
+msgstr ""
+
+msgid "failed to restart/reload DNS resolver"
+msgstr ""
+
+msgid "failed to sort data file"
+msgstr ""
+
+msgid "failed to stop %s"
+msgstr ""
+
+msgid "failed to unpack compressed cache"
+msgstr ""
+
+msgid "no HTTPS/SSL support on device"
+msgstr ""
 
 msgid "none"
 msgstr "なし"
