--- a/applications/luci-app-simple-adblock/po/ru/simple-adblock.po
+++ b/applications/luci-app-simple-adblock/po/ru/simple-adblock.po
@@ -1,31 +1,148 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: LuCI: simple-adblock\n"
 "POT-Creation-Date: 2017-12-07 14:00+0300\n"
-"PO-Revision-Date: 2018-01-22 13:18+0300\n"
-"Language-Team: http://cyber-place.ru\n"
-"MIME-Version: 1.0\n"
-"Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.7.1\n"
-"Last-Translator: Vladimir aka sunny <picfun@ya.ru>\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : "
-"2);\n"
+"PO-Revision-Date: 2020-08-16 19:29+0000\n"
+"Last-Translator: Alexey Napalkov <flynbit@gmail.com>\n"
+"Language-Team: Russian <https://hosted.weblate.org/projects/openwrt/"
+"luciapplicationssimple-adblock/ru/>\n"
 "Language: ru\n"
-"Project-Info: Это технический перевод, не дословный. Главное-удобный русский интерфейс, все проверялось в "
-"графическом режиме, совместим с другими apps\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"X-Generator: Weblate 4.2-dev\n"
+"Project-Info: Это технический перевод, не дословный. Главное-удобный русский "
+"интерфейс, все проверялось в графическом режиме, совместим с другими apps\n"
 
-msgid "Blacklisted Domain URLs"
-msgstr "URL ссылки Черных<br />списков доменов"
+msgid "%s Error: %s"
+msgstr "%s Ошибка: %s"
 
-msgid "Blacklisted Domains"
-msgstr "Черный список доменов"
+msgid "%s Error: %s %s"
+msgstr "%s Ошибка: %s %s"
 
-msgid "Blacklisted Hosts URLs"
-msgstr "URL ссылки Черных<br />списков хостов"
+#, fuzzy
+msgid "%s is blocking %s domains (with %s)."
+msgstr "%s блокирует %s домены (с %s)."
 
-msgid "Controls system log and console output verbosity"
-msgstr "Детальная настройка записи событий в системный журнал."
+msgid "%s is not installed or not found"
+msgstr "%s не установлен или не найден"
+
+msgid "Add IPv6 entries"
+msgstr "Добавить записи IPv6"
+
+msgid "Add IPv6 entries to block-list."
+msgstr "Добавьте записи IPv6 в черный список."
+
+msgid "Advanced Configuration"
+msgstr "расширенная конфигурация"
+
+msgid "Allowed Domain URLs"
+msgstr "Разрешённые URL-адреса доменов"
+
+msgid "Allowed Domains"
+msgstr "Разрешенные домены"
+
+msgid "Allowed and Blocked Lists Management"
+msgstr "Управление разрешенными и заблокированными списками"
+
+msgid ""
+"Attempt to create a compressed cache of block-list in the persistent memory."
+msgstr "Попытайтесь создать сжатый кеш блочных списков в постоянной памяти."
+
+msgid "Automatic Config Update"
+msgstr ""
+
+msgid "Basic Configuration"
+msgstr "Базовая конфигурация"
+
+msgid "Blocked Domain URLs"
+msgstr "Заблокированные URL-адреса доменов"
+
+msgid "Blocked Domains"
+msgstr "Заблокированные домены"
+
+msgid "Blocked Hosts URLs"
+msgstr ""
+
+msgid "Cache file containing %s domains found."
+msgstr ""
+
+msgid "Collected Errors"
+msgstr "Собранные ошибки"
+
+msgid "Compressed cache file found."
+msgstr ""
+
+msgid "Configuration"
+msgstr "Конфигурация"
+
+msgid "Controls system log and console output verbosity."
+msgstr "Контроль вывода системного лога в консоль."
+
+msgid "Curl download retry"
+msgstr "Curl повторной загрузки"
+
+msgid "DNS Service"
+msgstr "Служба DNS"
+
+msgid "DNSMASQ Additional Hosts"
+msgstr "DNSMASQ Дополнительные хосты"
+
+msgid "DNSMASQ Config"
+msgstr "DNSMASQ Конфигурация"
+
+msgid "DNSMASQ IP Set"
+msgstr "Установить IP DNSMASQ"
+
+msgid "DNSMASQ Servers File"
+msgstr "Файл серверов DNSMASQ"
+
+msgid "Delay (in seconds) for on-boot start"
+msgstr "Задержка (в секундах) для запуска при загрузке"
+
+msgid "Disable"
+msgstr "Отключить"
+
+msgid "Disable Debugging"
+msgstr "Отключить отладку"
+
+msgid "Do not add IPv6 entries"
+msgstr "Не добавлять записи IPv6"
+
+msgid "Do not store compressed cache"
+msgstr "Не хранить сжатый кеш"
+
+msgid "Do not use simultaneous processing"
+msgstr "Не используйте одновременную обработку"
+
+msgid "Download time-out (in seconds)"
+msgstr "Время ожидания загрузки (в секундах)"
+
+msgid "Downloading"
+msgstr "Скачивание"
+
+msgid "Enable"
+msgstr "Включить"
+
+msgid "Enable Debugging"
+msgstr "Включить отладку"
+
+msgid "Enables debug output to /tmp/simple-adblock.log."
+msgstr "Включает отладочный вывод в /tmp/simple-adblock.log."
+
+msgid "Error"
+msgstr "Ошибка"
+
+msgid "Fail"
+msgstr ""
+
+msgid "Force Re-Download"
+msgstr ""
+
+msgid "Force Reloading"
+msgstr "Принудительная перезагрузка"
 
 msgid "Force Router DNS"
 msgstr "Назначить DNS роутера"
@@ -33,65 +150,203 @@ msgstr "Назначить DNS роутера"
 msgid "Force Router DNS server to all local devices"
 msgstr "Назначить DNS роутера всем локальным устройствам"
 
-msgid "Forces Router DNS use on local devices, also known as DNS Hijacking"
+msgid "Forces Router DNS use on local devices, also known as DNS Hijacking."
 msgstr ""
-"Назначить DNS роутера всем локальным устройствам, методом DNS Hijacking."
+"Принудительное использование DNS-маршрутизатора на локальных устройствах, "
+"также известных как перехват DNS."
 
-msgid "Individual domains to be blacklisted"
-msgstr "Домены добавленные пользователем в Черный список."
+msgid "IPv6 Support"
+msgstr "Поддержка IPv6"
 
-msgid "Individual domains to be whitelisted"
-msgstr "Домены добавленные пользователем в Белый список."
+msgid ""
+"If curl is installed and detected, it would retry download this many times "
+"on timeout/fail."
+msgstr ""
+"Если curl установлен и обнаружен, он попытается загрузить это много раз по "
+"тайм-ауту / неудаче."
+
+msgid "Individual domains to be allowed."
+msgstr "Отдельные домены будут разрешены."
+
+msgid "Individual domains to be blocked."
+msgstr "Отдельные домены будут заблокированы."
+
+msgid "Info"
+msgstr "Информация"
 
 msgid "LED to indicate status"
 msgstr "LED индикация состояния"
+
+msgid ""
+"Launch all lists downloads and processing simultaneously, reducing service "
+"start time."
+msgstr ""
+"Запускайте все списки загрузки и обработки одновременно, сокращая время "
+"запуска сервиса."
 
 msgid "Let local devices use their own DNS servers if set"
 msgstr ""
 "Разрешить локальным устройствам использовать собственные DNS, если они "
 "прописаны в настройках сети устройства"
 
+msgid "Loading"
+msgstr "Загрузка"
+
+msgid "Message"
+msgstr "Сообщение"
+
 msgid "Output Verbosity Setting"
 msgstr "Настройка журнала"
 
-msgid "Pick the LED not already used in"
-msgstr "Выберите LED не используется на странице"
+msgid "Perform config update before downloading the block/allow-lists."
+msgstr ""
+
+msgid ""
+"Pick the DNS resolution option to create the adblock list for, see the <a "
+"href=\"%s#dns-resolution-option\" target=\"_blank\">README</a> for details."
+msgstr ""
+
+msgid "Pick the LED not already used in %sSystem LED Configuration%s."
+msgstr ""
+
+msgid "Please note that %s is not supported on this system."
+msgstr "Обратите внимание, %s не поддерживается в этой системе."
+
+msgid "Restarting"
+msgstr "Перезапуск"
+
+msgid "Run service after set delay on boot."
+msgstr "Запустите сервис после установки задержки при загрузке."
+
+msgid "Service Status"
+msgstr "Статус сервиса"
+
+msgid "Service Status [%s %s]"
+msgstr "Статус службы [%s %s]"
 
 msgid "Simple AdBlock"
-msgstr "Simple AdBlock"
+msgstr "Простой AdBlock"
 
 msgid "Simple AdBlock Settings"
 msgstr "Simple AdBlock настройки"
 
+msgid "Simultaneous processing"
+msgstr "Одновременная обработка"
+
 msgid "Some output"
 msgstr "Частичная запись"
 
-msgid "Start Simple Adblock service"
-msgstr "Запуск сервиса Simple Adblock"
+msgid "Start"
+msgstr "Запустить"
+
+msgid "Starting"
+msgstr "Запуск"
+
+msgid "Stop"
+msgstr "Остановить"
+
+msgid "Stop the download if it is stalled for set number of seconds."
+msgstr ""
+"Остановите загрузку, если она остановлена на заданное количество секунд."
+
+msgid "Stopped"
+msgstr "Остановлено"
+
+msgid "Store compressed cache"
+msgstr "Хранить сжатый кеш"
+
+msgid "Store compressed cache file on router"
+msgstr "Хранить сжатый файл кэша на маршрутизаторе"
+
+msgid "Success"
+msgstr "Успешно"
 
 msgid "Suppress output"
 msgstr "Запретить запись"
 
-msgid "System LED Configuration"
-msgstr "'Настройка LED индикации' системы."
+msgid "Task"
+msgstr "Задача"
 
-msgid "URLs to lists of domains to be blacklisted"
-msgstr "URL ссылки Черных списков доменов."
+msgid "URLs to lists of domains to be allowed."
+msgstr ""
 
-msgid "URLs to lists of domains to be whitelisted"
-msgstr "URL ссылки Белых списков доменов."
+msgid "URLs to lists of domains to be blocked."
+msgstr ""
 
-msgid "URLs to lists of hosts to be blacklisted"
-msgstr "URL ссылки Черных списков хостов."
+msgid "URLs to lists of hosts to be blocked."
+msgstr ""
+
+msgid "Unbound AdBlock List"
+msgstr "Свободный список AdBlock"
+
+msgid "Use simultaneous processing"
+msgstr "Использовать одновременную обработку"
 
 msgid "Verbose output"
-msgstr "Подробная запись"
+msgstr "Подробный вывод"
 
-msgid "Whitelisted Domain URLs"
-msgstr "URL ссылки Белых списков доменов"
+msgid "Warning"
+msgstr "Внимание"
 
-msgid "Whitelisted Domains"
-msgstr "Белый список доменов"
+msgid "failed to access shared memory"
+msgstr "не удалось получить доступ к общей памяти"
+
+msgid "failed to create '%s' file"
+msgstr "не удалось создать файл '%s'"
+
+msgid "failed to create block-list or restart DNS resolver"
+msgstr "не удалось создать черный список или перезапустить DNS resolver"
+
+msgid "failed to create compressed cache"
+msgstr "не удалось создать сжатый кэш"
+
+msgid "failed to download"
+msgstr "не удалось скачать"
+
+msgid "failed to download Config Update file"
+msgstr ""
+
+msgid "failed to format data file"
+msgstr "не удалось отформатировать файл данных"
+
+msgid "failed to move '%s' to '%s'"
+msgstr "не удалось переместить '%s' в '%s'"
+
+msgid "failed to move temporary data file to '%s'"
+msgstr "не удалось переместить временный файл данных в '%s'"
+
+msgid "failed to optimize data file"
+msgstr "не удалось оптимизировать файл данных"
+
+msgid "failed to parse"
+msgstr ""
+
+msgid "failed to parse Config Update file"
+msgstr ""
+
+msgid "failed to process allow-list"
+msgstr ""
+
+msgid "failed to reload/restart DNS resolver"
+msgstr "не удалось перезагрузить/перезапустить DNS-решатель"
+
+msgid "failed to remove temporary files"
+msgstr "не удалось удалить временные файлы"
+
+msgid "failed to restart/reload DNS resolver"
+msgstr "не удалось перезапустить/перезагрузить DNS resolver"
+
+msgid "failed to sort data file"
+msgstr "не удалось отсортировать файл данных"
+
+msgid "failed to stop %s"
+msgstr "не удалось остановить %s"
+
+msgid "failed to unpack compressed cache"
+msgstr "не удалось распаковать сжатый кэш"
+
+msgid "no HTTPS/SSL support on device"
+msgstr "нет поддержки HTTPS/SSL на устройстве"
 
 msgid "none"
 msgstr "ничего"
