luci-app-vpnbypass: sync with upstream source

--- a/applications/luci-app-vpnbypass/po/pt-br/vpnbypass.po
+++ b/applications/luci-app-vpnbypass/po/pt-br/vpnbypass.po
@@ -12,10 +12,27 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "Language: pt_BR\n"
 
+msgid "%s (disabled)"
+msgstr ""
+
+msgid "%s is not installed or not found"
+msgstr ""
+
+msgid "Disable"
+msgstr ""
+
 msgid "Domains to Bypass"
 msgstr "Domínios para evitar a VPN"
 
-msgid "Domains to be accessed directly (outside of the VPN tunnel), see"
+msgid ""
+"Domains to be accessed directly (outside of the VPN tunnel), see %sREADME%s "
+"for syntax"
+msgstr ""
+
+msgid "Enable"
+msgstr ""
+
+msgid "Loading"
 msgstr ""
 
 msgid "Local IP Addresses to Bypass"
@@ -32,9 +49,6 @@ msgstr "Portas locais para evitar a VPN"
 msgid "Local ports to trigger VPN Bypass"
 msgstr "Portas locais para disparar o VPN Bypass"
 
-msgid "README"
-msgstr ""
-
 msgid "Remote IP Addresses to Bypass"
 msgstr ""
 
@@ -49,17 +63,38 @@ msgstr "Portas remotas para evitar a VPN"
 msgid "Remote ports to trigger VPN Bypass"
 msgstr "Portas remotas para disparar o VPN Bypass"
 
-msgid "Start VPNBypass service"
+msgid "Restart"
+msgstr ""
+
+msgid "Running"
+msgstr ""
+
+msgid "Service Status"
+msgstr ""
+
+msgid "Service Status [%s %s]"
+msgstr ""
+
+msgid "Start"
+msgstr ""
+
+msgid "Stop"
+msgstr ""
+
+msgid "Stopped"
+msgstr ""
+
+msgid "VPN"
 msgstr ""
 
 msgid "VPN Bypass"
 msgstr "VPN Bypass"
 
+msgid "VPN Bypass Rules"
+msgstr ""
+
 msgid "VPN Bypass Settings"
 msgstr "Configurações do VPN Bypass"
-
-msgid "for syntax"
-msgstr ""
 
 #~ msgid "Enable VPN Bypass"
 #~ msgstr "Habilitar o VPN Bypass"
