--- a/applications/luci-app-vpnbypass/po/templates/vpnbypass.pot
+++ b/applications/luci-app-vpnbypass/po/templates/vpnbypass.pot
@@ -1,10 +1,27 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=UTF-8"
 
+msgid "%s (disabled)"
+msgstr ""
+
+msgid "%s is not installed or not found"
+msgstr ""
+
+msgid "Disable"
+msgstr ""
+
 msgid "Domains to Bypass"
 msgstr ""
 
-msgid "Domains to be accessed directly (outside of the VPN tunnel), see"
+msgid ""
+"Domains to be accessed directly (outside of the VPN tunnel), see %sREADME%s "
+"for syntax"
+msgstr ""
+
+msgid "Enable"
+msgstr ""
+
+msgid "Loading"
 msgstr ""
 
 msgid "Local IP Addresses to Bypass"
@@ -21,9 +38,6 @@ msgstr ""
 msgid "Local ports to trigger VPN Bypass"
 msgstr ""
 
-msgid "README"
-msgstr ""
-
 msgid "Remote IP Addresses to Bypass"
 msgstr ""
 
@@ -38,14 +52,35 @@ msgstr ""
 msgid "Remote ports to trigger VPN Bypass"
 msgstr ""
 
-msgid "Start VPNBypass service"
+msgid "Restart"
+msgstr ""
+
+msgid "Running"
+msgstr ""
+
+msgid "Service Status"
+msgstr ""
+
+msgid "Service Status [%s %s]"
+msgstr ""
+
+msgid "Start"
+msgstr ""
+
+msgid "Stop"
+msgstr ""
+
+msgid "Stopped"
+msgstr ""
+
+msgid "VPN"
 msgstr ""
 
 msgid "VPN Bypass"
 msgstr ""
 
-msgid "VPN Bypass Settings"
+msgid "VPN Bypass Rules"
 msgstr ""
 
-msgid "for syntax"
+msgid "VPN Bypass Settings"
 msgstr ""
