--- a/applications/luci-app-vpnbypass/po/ru/vpnbypass.po
+++ b/applications/luci-app-vpnbypass/po/ru/vpnbypass.po
@@ -1,25 +1,45 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: LuCI: vpnbypass\n"
 "POT-Creation-Date: 2018-01-01 21:00+0300\n"
-"PO-Revision-Date: 2018-01-22 13:17+0300\n"
-"Language-Team: http://cyber-place.ru\n"
-"MIME-Version: 1.0\n"
-"Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.7.1\n"
-"Last-Translator: Vladimir aka sunny <picfun@ya.ru>\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"PO-Revision-Date: 2020-08-16 19:29+0000\n"
+"Last-Translator: Alexey Napalkov <flynbit@gmail.com>\n"
+"Language-Team: Russian <https://hosted.weblate.org/projects/openwrt/"
+"luciapplicationsvpnbypass/ru/>\n"
 "Language: ru\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"X-Generator: Weblate 4.2-dev\n"
 "Project-Info: Это технический перевод, не дословный. Главное-удобный русский "
 "интерфейс, все проверялось в графическом режиме, совместим с другими apps\n"
+
+msgid "%s (disabled)"
+msgstr "%s (отключено)"
+
+msgid "%s is not installed or not found"
+msgstr "%s не установлен или не найден"
+
+msgid "Disable"
+msgstr "Отключить"
 
 msgid "Domains to Bypass"
 msgstr "Домены, для<br />обхода блокировки"
 
-msgid "Domains to be accessed directly (outside of the VPN tunnel), see"
-msgstr "Домены должны быть доступны напрямую (вне VPN-туннеля), см."
+msgid ""
+"Domains to be accessed directly (outside of the VPN tunnel), see %sREADME%s "
+"for syntax"
+msgstr ""
+"Домены для доступа напрямую (за пределами VPN-туннеля), синтаксис см. в "
+"%sREADME%s"
+
+msgid "Enable"
+msgstr "Включить"
+
+msgid "Loading"
+msgstr "Загрузка"
 
 msgid "Local IP Addresses to Bypass"
 msgstr "Локальный IP-адрес<br />обхода VPN"
@@ -28,17 +48,14 @@ msgid ""
 "Local IP addresses or subnets with direct internet access (outside of the "
 "VPN tunnel)"
 msgstr ""
-"Локальные IP-адреса или подсети с прямым доступом в интернет (вне VPN-"
-"туннеля)."
+"Локальные IP-адреса или подсети с доступом в интернет напрямую (вне VPN-"
+"туннеля)"
 
 msgid "Local Ports to Bypass"
 msgstr "Локальные порты для запуска обхода VPN"
 
 msgid "Local ports to trigger VPN Bypass"
 msgstr "Локальные порты<br />для обхода VPN"
-
-msgid "README"
-msgstr "Описание"
 
 msgid "Remote IP Addresses to Bypass"
 msgstr "Удаленные IP-адреса<br />обхода VPN"
@@ -48,7 +65,7 @@ msgid ""
 "the VPN tunnel)"
 msgstr ""
 "Удаленные IP-адреса или подсети, которые будут доступны напрямую (вне "
-"туннеля VPN)."
+"туннеля VPN)"
 
 msgid "Remote Ports to Bypass"
 msgstr "Удаленные порты<br />для обхода VPN"
@@ -56,17 +73,35 @@ msgstr "Удаленные порты<br />для обхода VPN"
 msgid "Remote ports to trigger VPN Bypass"
 msgstr "Удаленные порты для запуска обхода VPN"
 
-msgid "Start VPNBypass service"
-msgstr ""
+msgid "Restart"
+msgstr "Перезапустить"
+
+msgid "Running"
+msgstr "Запущенные"
+
+msgid "Service Status"
+msgstr "Статус сервиса"
+
+msgid "Service Status [%s %s]"
+msgstr "Статус службы [%s %s]"
+
+msgid "Start"
+msgstr "Запустить"
+
+msgid "Stop"
+msgstr "Остановить"
+
+msgid "Stopped"
+msgstr "Остановлено"
+
+msgid "VPN"
+msgstr "VPN"
 
 msgid "VPN Bypass"
 msgstr "Обход VPN"
 
+msgid "VPN Bypass Rules"
+msgstr "Правила обхода VPN"
+
 msgid "VPN Bypass Settings"
 msgstr "Настройка обхода VPN"
-
-msgid "for syntax"
-msgstr "для синтаксиса"
-
-#~ msgid "Enable/start service"
-#~ msgstr "Включение / Запуск сервиса"
