treewide: i18n - backport and sync translations
Backport translations from master.
Sync translations.

Signed-off-by: Hannu Nyman <hannu.nyman@iki.fi>

--- a/modules/luci-base/po/es/base.po
+++ b/modules/luci-base/po/es/base.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-06-10 03:41+0200\n"
-"PO-Revision-Date: 2020-10-08 17:28+0000\n"
+"PO-Revision-Date: 2020-10-20 05:26+0000\n"
 "Last-Translator: Franco Castillo <castillofrancodamian@gmail.com>\n"
 "Language-Team: Spanish <https://hosted.weblate.org/projects/openwrt/luci/es/"
 ">\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.3-dev\n"
+"X-Generator: Weblate 4.3.1-dev\n"
 
 msgid "%s is untagged in multiple VLANs!"
 msgstr "¡%s está desetiquetado en varias VLAN!"
@@ -138,8 +138,8 @@ msgid ""
 "<abbr title=\"maximal\">Max.</abbr> <abbr title=\"Dynamic Host Configuration "
 "Protocol\">DHCP</abbr> leases"
 msgstr ""
-"Máximas conexiones <abbr title=\"Dynamic Host Configuration Protocol\">DHCP</"
-"abbr>"
+"Máximo de concesiones <abbr title=\"Dynamic Host Configuration Protocol"
+"\">DHCP</abbr>"
 
 msgid ""
 "<abbr title=\"maximal\">Max.</abbr> <abbr title=\"Extension Mechanisms for "
@@ -237,10 +237,10 @@ msgid "Active Connections"
 msgstr "Conexiones activas"
 
 msgid "Active DHCP Leases"
-msgstr "Clientes DHCP activos"
+msgstr "Concesiones DHCP activas"
 
 msgid "Active DHCPv6 Leases"
-msgstr "Clientes DHCPv6 activos"
+msgstr "Concesiones DHCPv6 activas"
 
 msgid "Ad-Hoc"
 msgstr "Ad-Hoc"
@@ -1113,7 +1113,7 @@ msgid "Ethernet Adapter"
 msgstr "Adaptador ethernet"
 
 msgid "Ethernet Switch"
-msgstr "Switch ethernet"
+msgstr "Conmutador ethernet"
 
 msgid "Exclude interfaces"
 msgstr "Excluir interfaces"
@@ -1724,13 +1724,13 @@ msgid "Leaf"
 msgstr "Hoja"
 
 msgid "Lease time"
-msgstr "Tiempo de expiración"
+msgstr "Tiempo de concesión"
 
 msgid "Lease validity time"
 msgstr "Tiempo de validación de cesión"
 
 msgid "Leasefile"
-msgstr "Archivo de conexiones"
+msgstr "Archivo de concesión"
 
 msgid "Leasetime remaining"
 msgstr "TIempo de conexión restante"
@@ -1902,7 +1902,7 @@ msgid "Loss of Signal Seconds (LOSS)"
 msgstr "Pérdida de segundos de señal (LOSS)"
 
 msgid "Lowest leased address as offset from the network address."
-msgstr "Dirección inicial más baja como diferencia de la dirección de red."
+msgstr "Dirección arrendada más baja como compensación de la dirección de red."
 
 msgid "MAC-Address"
 msgstr "Dirección MAC"
@@ -1945,7 +1945,7 @@ msgid "Max. Attainable Data Rate (ATTNDR)"
 msgstr "Max. velocidad de datos alcanzable (ATTNDR)"
 
 msgid "Maximum allowed number of active DHCP leases"
-msgstr "Número máximo permitido de clientes DHCP activos"
+msgstr "Número máximo permitido de concesiones DHCP activas"
 
 msgid "Maximum allowed number of concurrent DNS queries"
 msgstr "Número máximo de consultas DNS concurrentes"
@@ -1965,7 +1965,7 @@ msgid ""
 msgstr ""
 
 msgid "Maximum number of leased addresses."
-msgstr "Máximo de conexiones activas."
+msgstr "Máximo de concesiones activas."
 
 msgid "Mbit/s"
 msgstr "Mbit/s"
@@ -3094,7 +3094,7 @@ msgid "Static IPv6 Routes"
 msgstr "Rutas IPv6 estáticas"
 
 msgid "Static Leases"
-msgstr "Direcciones estáticas"
+msgstr "Concesiones estáticas"
 
 msgid "Static Routes"
 msgstr "Rutas estáticas"
@@ -3107,7 +3107,7 @@ msgid ""
 "to DHCP clients. They are also required for non-dynamic interface "
 "configurations where only hosts with a corresponding lease are served."
 msgstr ""
-"Las direcciones estáticas se usan para asignar direcciones IP fijas y "
+"Las concesiones estáticas se usan para asignar direcciones IP fijas y "
 "nombres identificativos de dispositivos a clientes DHCP. También son "
 "necesarias para configuraciones de interfaces no dinámicas en las que a cada "
 "dispositivo siempre se le quiere dar la misma dirección IP."
@@ -3137,10 +3137,10 @@ msgid "Swap Entry"
 msgstr "Entrada de intercambio"
 
 msgid "Switch"
-msgstr "Switch"
+msgstr "Conmutador"
 
 msgid "Switch %q"
-msgstr "Switch %q"
+msgstr "Conmutador %q"
 
 msgid "Switch %q (%s)"
 msgstr "Switch %q (%s)"
@@ -3148,8 +3148,8 @@ msgstr "Switch %q (%s)"
 msgid ""
 "Switch %q has an unknown topology - the VLAN settings might not be accurate."
 msgstr ""
-"El Switch %q tiene una topología desconocida: la configuración de VLAN puede "
-"no ser precisa."
+"El conmutador %q tiene una topología desconocida: la configuración de VLAN "
+"puede no ser precisa."
 
 msgid "Switch VLAN"
 msgstr "Switch VLAN"
@@ -3762,7 +3762,7 @@ msgid "Waiting for command to complete..."
 msgstr "Esperando a que termine el comando..."
 
 msgid "Waiting for device..."
-msgstr "Esperando al dispositivo..."
+msgstr "Esperando por el dispositivo..."
 
 msgid "Warning"
 msgstr "Advertencia"
@@ -3879,8 +3879,8 @@ msgid ""
 "file where given <abbr title=\"Dynamic Host Configuration Protocol\">DHCP</"
 "abbr>-leases will be stored"
 msgstr ""
-"Archivo en el que se guardarán las direcciones <abbr title=\"Dynamic Host "
-"Configuration Protocol\">DHCP</abbr> asignadas"
+"archivo en donde se almacenará las concesiones <abbr title=\"Dynamic Host "
+"Configuration Protocol\">DHCP</abbr>"
 
 msgid "forward"
 msgstr "Reenviar"
