--- a/modules/luci-base/po/fr/base.po
+++ b/modules/luci-base/po/fr/base.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-06-10 03:40+0200\n"
-"PO-Revision-Date: 2020-08-08 14:26+0000\n"
+"PO-Revision-Date: 2020-10-24 08:56+0000\n"
 "Last-Translator: ButterflyOfFire <ButterflyOfFire@protonmail.com>\n"
 "Language-Team: French <https://hosted.weblate.org/projects/openwrt/luci/fr/"
 ">\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 4.2-dev\n"
+"X-Generator: Weblate 4.3.1\n"
 
 msgid "%s is untagged in multiple VLANs!"
 msgstr "%s est non-taggué dans plusieurs VLANs !"
@@ -3796,7 +3796,7 @@ msgid "Waiting for command to complete..."
 msgstr "En attente de la fin de la commande..."
 
 msgid "Waiting for device..."
-msgstr "En attente de l'appareil ..."
+msgstr "En attente de l’appareil …"
 
 msgid "Warning"
 msgstr "Avertissement"
@@ -3968,7 +3968,7 @@ msgid "no link"
 msgstr "pas de lien"
 
 msgid "none"
-msgstr "Aucun"
+msgstr "aucun"
 
 msgid "not present"
 msgstr "pas présent"
