--- a/modules/luci-base/po/he/base.po
+++ b/modules/luci-base/po/he/base.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2020-01-14 15:21+0000\n"
-"Last-Translator: Franco Castillo <castillofrancodamian@gmail.com>\n"
+"PO-Revision-Date: 2020-10-20 05:26+0000\n"
+"Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
 "Language-Team: Hebrew <https://hosted.weblate.org/projects/openwrt/luci/he/"
 ">\n"
 "Language: he\n"
@@ -10,7 +10,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Weblate 3.11-dev\n"
+"X-Generator: Weblate 4.3.1-dev\n"
 
 msgid "%s is untagged in multiple VLANs!"
 msgstr ""
@@ -25,7 +25,7 @@ msgid "(empty)"
 msgstr "(ריק)"
 
 msgid "(no interfaces attached)"
-msgstr "(אין ממשק מצורף)"
+msgstr "(לא צורף אף מנשק)"
 
 msgid "-- Additional Field --"
 msgstr "-- שדה נוסף --"
@@ -40,7 +40,7 @@ msgid "-- match by device --"
 msgstr ""
 
 msgid "-- match by label --"
-msgstr ""
+msgstr "-- התאמה לפי תווית --"
 
 msgid "-- match by uuid --"
 msgstr ""
@@ -309,7 +309,7 @@ msgid ""
 msgstr ""
 
 msgid "Allowed IPs"
-msgstr ""
+msgstr "כתובות IP מורשות"
 
 msgid ""
 "Also see <a href=\"https://www.sixxs.net/faq/connectivity/?faq=comparison"
@@ -641,7 +641,7 @@ msgid "Close list..."
 msgstr "סגור רשימה..."
 
 msgid "Collecting data..."
-msgstr "אוסף מידע..."
+msgstr "נאספים נתונים…"
 
 msgid "Command"
 msgstr "פקודה"
@@ -1135,7 +1135,7 @@ msgid "Firewall"
 msgstr ""
 
 msgid "Firewall Mark"
-msgstr ""
+msgstr "סימן חומת אש"
 
 msgid "Firewall Settings"
 msgstr ""
@@ -1529,7 +1529,7 @@ msgid "Installed packages"
 msgstr ""
 
 msgid "Interface"
-msgstr ""
+msgstr "מנשק"
 
 msgid "Interface %q device auto-migrated from %q to %q."
 msgstr ""
@@ -1726,7 +1726,7 @@ msgid "Listen Interfaces"
 msgstr ""
 
 msgid "Listen Port"
-msgstr ""
+msgstr "פתחת האזנה"
 
 msgid "Listen only on the given interface or, if unspecified, on all"
 msgstr ""
@@ -2445,7 +2445,7 @@ msgid "Pseudo Ad-Hoc (ahdemo)"
 msgstr ""
 
 msgid "Public Key"
-msgstr ""
+msgstr "מפתח ציבורי"
 
 msgid "Public prefix routed to this device for distribution to clients."
 msgstr ""
@@ -3241,7 +3241,7 @@ msgid "This page gives an overview over currently active network connections."
 msgstr "דף זה מציג סקירה של חיבורי הרשת הפעילים כרגע."
 
 msgid "This section contains no values yet"
-msgstr "אזור זה עדיין לא מכיל ערכים."
+msgstr "סעיף זה לא מכיל ערכים עדיין"
 
 msgid "Time Synchronization"
 msgstr "סנכרון זמן"
