--- a/modules/luci-base/po/pt/base.po
+++ b/modules/luci-base/po/pt/base.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-05-26 19:03+0200\n"
-"PO-Revision-Date: 2020-09-29 14:41+0000\n"
+"PO-Revision-Date: 2020-10-14 08:09+0000\n"
 "Last-Translator: ssantos <ssantos@web.de>\n"
 "Language-Team: Portuguese <https://hosted.weblate.org/projects/openwrt/luci/"
 "pt/>\n"
@@ -3778,7 +3778,7 @@ msgid "Waiting for command to complete..."
 msgstr "A aguardar que o comando termine..."
 
 msgid "Waiting for device..."
-msgstr "Esperando pelo aparelho..."
+msgstr "À espera do aparelho..."
 
 msgid "Warning"
 msgstr "Aviso"
